@@ -4,6 +4,9 @@ Changelog
 2020.2.0rc2 (unreleased)
 ------------------------
 
+- Add hidden flag to OrgUnits and AdminUnits. [njohner]
+- Disallow choosing hidden orgunits as responsible_client in tasks and forwardings. [njohner]
+- Do not display hidden orgunits in orgunit selector. [njohner]
 - OfficeOnline: Show specific message for collaborative checkouts. [lgraf]
 - Document GET API: Also include info about collaborative checkouts. [lgraf]
 - Also return @id in globalindex endpoint. [njohner]
@@ -12,7 +15,6 @@ Changelog
 - Fix encoding issue in query-source `query` parameter. [deiferni]
 - Do no longer send activity mails from the current user due to spam issues when the user's email address does not match the portal domain. [elioschmutz]
 - OfficeOnline: Use collaborative checkout / checkins. [lgraf]
-- Handle hidden flag in models.OGDSService. [njohner]
 - Add list workspaces action for new frontend. [njohner]
 - Add additional fields to @user-listing endpoint. [njohner]
 - Add ogds user listing via @user-listing endpoint. [deiferni]
